--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,19 @@ body {
     margin: 0 auto;
 }
 
-canvas {
-    border: 1px solid black;
-    margin-top: 20px;
+.canvas-container {
+    position: relative;
     width: 100%;
-    height: auto;
+    padding-bottom: 100%; /* Ratio 1:1 untuk menjaga canvas menjadi kotak */
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
 }
 
 form {
